syntax = "proto3";
package filetransfer;

option go_package = "github.com/itsrobel/sync/internal/services/filetransfer";

service FileService {
  //rpc StreamFileChanges(stream FileChange) returns (stream FileChange) {}; // Bidirectional streaming for file changes
  //rpc SendFileToClient(FileRequest) returns (stream FileData) {};
  rpc SendFileToServer(stream FileData) returns (ActionResponse) {};
  //rpc DeleteFile(FileRequest) returns (ActionResponse);
  //rpc MoveFile(MoveFileRequest) returns (ActionResponse);
}
// that should then determine the actions of either
// look up in mongo db if the file exists
//
// the file change should be the first it of information that is sent
// if the file does not exist yeah, then send the entire file
// TODO: I need to get file differences
// TODO: add the directory watching to the grpc
message FileData {
  string id = 1;        // Persistent unique identifier for the file
  bytes content = 2;    // File content (for upload/download)
  string location = 3;  // location of the file
  int64 offset = 4;     // Offset for streaming
  int64 total_size = 5; // Total size of the file
}

message FileChange {
  string content = 1;   // File content
  string location = 2;  // Path to the file
  string file_id = 3;   // Unique identifier for the file
  string change_id = 4; // Unique identifier for the change
  int64 offset = 5;     // Offset for streaming
  int64 total_size = 6; // Total size of the file change
  int64 timestamp = 7;  // Timestamp for the change
}

message FileRequest {
  string id = 1;   // Persistent unique identifier for the file
  string path = 2; // Path to the file (used for delete or download)
}

message MoveFileRequest {
  string id = 1;          // Persistent unique identifier for the file
  string destination = 2; // New path after move/rename
}

message ActionResponse {
  bool success = 1;
  string message = 2;
}
